# VIR_Tracker

./: CMakeLists.txt  CMakeLists_22.txt  main.cpp  multi1.sh  multi2.sh  multi3.sh  requirements.txt  test.sh
config/: head_conf.yaml
include/: BodyTracker.hh  FaceDetector.hh  GLViewer.hpp  GlassTracker.hh  MonitorTracker.hh  utils.hpp
logs/: sdk.log.1  sdk.log.2  sdk.log.3
logs/mv-hrnet/: events.out.tfevents.1694501330.lab
src/: BodyTracker.cc  FaceDetector.cc  GLViewer.cpp  GlassTracker.cc  MonitorTracker.cc
